<resources>
    <string name="app_name">Money Management</string>
    <string name="Balance">Total Balance</string>
    <string name="Budget">Budget</string>
    <string name="Expense">Expense</string>
    <string name="Spending_frequency">Spending frequency</string>
    <string name="Today">Today</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="Recent_transactions">Recent transactions</string>
    <string name="History">History</string>
    <string name="See_">Review your expend</string>
    <string name="Date">Date</string>
    <string name="Choose_">Choose the day you want to search for</string>
    <string name="Chart">Chart</string>
    <string name="See_Y">See your analytic chart</string>
    <string name="Today_Analytics">Today Analytics</string>
    <string name="Week_Analytics">Week Analytics</string>
    <string name="Month_Analytics">Month Analytics</string>
    <string name="User_name">Display name</string>
    <string name="My_Account">My Account</string>
    <string name="Setting">Setting</string>
    <string name="Change_Pass">Change password</string>
    <string name="Log_out">Log out</string>
    <string name="Version">Version: 1.0</string>
    <string name="title">Helping You Make Smart Financial Choices</string>
    <string name="title1">Become a manager of your money and spend wisely</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Password">Password</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_with">Don’t have an account ? Sign Up</string>
    <string name="Full_name">Full name</string>
    <string name="Phone_number">Phone number</string>
    <string name="date">Date of birth</string>
    <string name="log_with_acc">Do you already have an account? Log in</string>
    <string name="service">You agree to the Terms of Service and Privacy Policy</string>
    <string name="budget">Buget for this month</string>
    <string name="budget_list">Budget list: </string>
    <string name="Today_spending">Today</string>
    <string name="Today_title">Today you have spend</string>
    <string name="transaction">Transactions: </string>
    <string name="total">Total spent: </string>
    <string name="On">On: </string>
    <string name="Person_info">Person information</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="change_pass">Change password</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="current_pass">Current password:</string>
    <string name="new_pass_confirm">New password:</string>
    <string name="setting_title">Setting</string>
    <string name="display">Display</string>
    <string name="language">Language</string>
    <string name="language_choose">English</string>
    <string name="select_language">Select language</string>
    <string name="Note">Note: </string>
    <string name="date_1">Date: </string>
    <string name="title_forgot">Enter the email address you used to register, and we will send you an email recover your password in no time.</string>
    <string name="email">E-mail</string>
    <string name="send">SUBMIT</string>
    <string name="week_title">This week you have spend</string>
    <string name="month_title">This month you have spend</string>
    <string name="sign_gg">Sign in with Google</string>
    <string name="sign_fb">Sign in with Facebook</string>
    <string name="ver">Version: 1.0.0</string>
    <string name="instru">Guide</string>
    <string name="help">Support</string>
    <string name="follow_fb">Follow us on Facebook</string>
    <string name="follow_ins">Follow us on Instagram</string>
    <string name="follow_twitter">Follow us on Twitter</string>
    <string name="jo_us">Join us</string>
    <string name="we_help">How can we help you?</string>
    <string name="we_guide">It looks like you are experiencing problems with our sign up process. We are here to help so please get in touch with us.</string>
    <string name="em_help">Contact email: app@gmail.com</string>
    <string name="hotline">Hotline 19009999</string>
    <string name="Help">Help</string>
    <string name="home_screen">Home Screen</string>
    <string name="spent_today">You haven\'t spent anything today</string>
    <string name="spent_week">You haven\'t spent anything this week</string>
    <string name="spent_month">You haven\'t spent anything this month</string>
    <string name="add_tran">Add Transaction</string>
    <string name="add_bug">Add Budget</string>
    <string name="Guide">Guide</string>
    <string name="Loan">Loan</string>
    <string name="Borrow">Borrow</string>
    <string name="Lend">Lend</string>
    <string name="ttt">Total amount to pay</string>
    <string name="tt">Total amount to be collected</string>
    <string name="Left">Left</string>
    <string name="announce">Announce</string>
    <string name="title_app">Expend Management</string>
    <string name="wel">Welcome Back,</string>
    <string name="st">Money</string>
    <string name="br">Name</string>
    <string name="facebook_app_id" translatable="false">565104708298189</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">74e5c94fa747cfd9f15239d8327f17cc</string>
    //headings
    <string name="heading_one" translatable="false">Ghi chép các khoản thu chi mang lại cho bạn nhiều lợi ích</string>
    <string name="heading_two" translatable="false">Cung cấp bức tranh tổng quan về tình hình tài chính của bạn</string>
    <string name="heading_three" translatable="false">Chi tiêu thông minh với tính năng Ngân sách</string>

    <string name="desc_one" translatable="false">Có cái nhìn tổng quan về số tiền bạn thu và chi hàng tháng</string>
    <string name="desc_one1" translatable="false">Cắt giảm những chi tiêu không cần thiết</string>
    <string name="desc_one2" translatable="false">Tiết kiệm nhiều hơn</string>
    <string name="desc_one3" translatable="false">Giảm các khoản nợ</string>
    <string name="desc_two" translatable="false">Bạn chi tiêu nhiều nhất cho khoản mục nào ?</string>
    <string name="desc_two1" translatable="false">Chi phí cố định hàng tháng của bạn là bao nhiêu ?</string>
    <string name="desc_two2" translatable="false">Khoản chi nào đang bị lãng phí</string>
    <string name="desc_two3" translatable="false">Bạn sẽ tiết kiệm được bao nhiêu sau khi cắt giảm những khoản chi không cần thiết? Và nhiều hơn nữa.</string>

    <string name="desc_three1" translatable="false">Ngân sách cho phép bạn chia thu nhập thành nhiều nhóm và xác định số tiền bạn sẽ chi tiêu cho mỗi nhóm trong một khoảng thời gian nhất định</string>
    <string name="desc_three" translatable="false">Thông báo về số tiền còn lại hoặc đã bội chi, mỗi khi bạn sắp sửa vượt quá ngân sách.</string>
    <string name="desc_three2" translatable="false"></string>
    <string name="desc_three3" translatable="false"></string>
    <string-array name="items">
        <item>Transport</item>
        <item>Food</item>
        <item>House</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Charity</item>
        <item>Apparel</item>
        <item>Health</item>
        <item>Personal</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>