<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:flow_horizontalAlign="center">

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/image1"/>

    <TextView
        android:id="@+id/texttitle"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/heading_one"
        android:textColor="@color/black"
        android:textSize="22dp" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textdeccription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/desc_one"
        android:textColor="@color/black"
        android:textSize="16dp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textdeccription1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/desc_one1"
        android:textColor="@color/black"
        android:textSize="16dp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textdeccription2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/desc_one2"
        android:textColor="@color/black"
        android:textSize="16dp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textdeccription3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/desc_one3"
        android:textColor="@color/black"
        android:textSize="16dp" />

</LinearLayout>