<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_marginTop="-40dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        style="?android:attr/borderlessButtonStyle"
        tools:ignore="SpeakableTextPresentCheck"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:ems="10"
        android:hint="@string/User_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_round"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_round"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_round"/>

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/Phone_number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="45dp"
        android:gravity="center"
        android:text="@string/Date"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinnerday"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:entries="@array/days"
            />
        <Spinner
            android:id="@+id/spinnermonth"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:entries="@array/months"
            />
        <Spinner
            android:entries="@array/years"
            android:id="@+id/spinneryear"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
</LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"/>
    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="-40dp"
        android:text="@string/service">

    </TextView>
    <Button
        android:id="@+id/registerBtn"
        android:layout_marginTop="18dp"
        android:layout_width="300dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/edit_round"
        android:text="@string/register"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/registerQn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/log_with_acc"
            android:layout_gravity="center"
            android:textColor="#808080"
            android:layout_marginTop="5dp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</LinearLayout>