<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8F71FF "
        android:padding="16dp">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/txv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/arrow_back"
            android:text="@string/Help"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
    <ImageView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:src="@drawable/avata"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_help"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/we_guide"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginRight="65dp"
            android:orientation="vertical"
            android:background="@drawable/layout_bg_setting"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="48dp"
                android:src="@drawable/email"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/em_help"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/button"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:background="@drawable/layout_bg_setting"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="48dp"
                android:src="@drawable/hotline"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotline"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/button"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>