<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_marginTop="-40dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="20dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/button"
        android:text="@string/login"
        app:cornerRadius="20dp" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <Button
        android:id="@+id/btn_forgotpass"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/forgot_password"
        android:textColor="@color/button"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/LoginQn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/login_with"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#808080">
    </Button>
    </LinearLayout>
</LinearLayout>