<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BudgetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8F71FF"
        android:padding="16dp">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/txv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/arrow_back"
            android:text="@string/Budget"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:background="@drawable/card_view"
        >

        <TextView
            android:id="@+id/tv_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="137dp"
            android:layout_marginBottom="124dp"
            android:gravity="center"
            android:text="This Month"
            android:textColor="#ffff"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="146dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:text="@string/budget"
            android:textColor="#fff"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/totalBudgetAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="164dp"
            android:layout_marginBottom="43dp"
            android:gravity="center"
            android:text="$ 0"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget_list"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="#8F71FF"
            android:src="@drawable/ic_add"
            app:fabSize="normal" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>